--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
@@ -4,7 +4,7 @@
       <div class="card mx-3">
         <div class="card-body p-4">
           <h1 class="text-center">{{fromEdit ? 'Modifica' : 'Crea'}}</h1>
-          <h4 class="text-muted text-center">{{fromEdit ? 'Modifica ' : 'Crea '}} Coupon</h4>
+          <h4 class="text-muted text-center">{{fromEdit ? 'Modifica ' : 'Crea '}} Pacchetto</h4>
 
           <form [formGroup]="couponForm" (ngSubmit)="saveChange()">
 
@@ -110,7 +110,37 @@
                 </div>
               </div>
             </div> <!-- Published From -->
+            <div *ngIf="couponsAvailable" class="form-group row ">
+              <label class="col-sm-2 col-form-label">Coupons selezionati: </label>
+              <div class="col-sm-12 col-lg-8">
+                <ng-select formControlName="coupons"
+                           [items]="couponsAvailable"
+                           [multiple]="true"
+                           [closeOnSelect]="true"
+                           [searchable]= "true"
+                           bindLabel="title"
+                           placeholder="Seleziona coupons"
+                           [(ngModel)]="selectedCoupons"
+                           [ngClass]="{ 'is-invalid': submitted && f.coupons.errors }" >
+                </ng-select>
+              </div>
 
+            </div>
+            <div  class="form-group row">
+              <label class="col-sm-2 col-form-label">Seleziona categorie: </label>
+              <div class="col-sm-8">
+                <ng-select formControlName="categories"
+                           [items]="categories"
+                           [multiple]="true"
+                           [closeOnSelect]="true"
+                           [searchable]= "true"
+                           bindLabel="name"
+                           placeholder="Seleziona categorie"
+                           [(ngModel)]="selectedCategories">
+                </ng-select>
+              </div>
+
+            </div>
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Valido da:</label>
               <div class="col-sm-10">
@@ -172,7 +202,11 @@
                 <input type="number" formControlName="quantity" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }"/>
                 <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
-                  <div *ngIf="f.quantity.errors">Valore richiesto o incorretto</div>
+                  <div *ngIf="f.quantity.errors?.MatchErrorQuantity">Valore richiesto o incorretto</div>
+                </div>
+                <div class="invalid-feedback"
+                     *ngIf="submitted && f.quantity.errors?.QuantityArrayCoupons">
+                  <div>La quantità dei pacchetti da creare sono troppi rispetto ai coupons disponibili.</div>
                 </div>
               </div>
             </div> <!-- Quantity -->
