--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
@@ -244,7 +244,7 @@
           </div>
           <div class="form group">
             <p>
-              <button class="btn btn-block btn-success">{{fromEdit ? 'Salva modifiche' : 'Crea Coupon'}}</button>
+              <button class="btn btn-block btn-success">{{fromEdit ? 'Salva modifiche' : 'Crea Pacchetto'}}</button>
             </p>
           </div>
 
