--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -1,173 +1,55 @@
-<!--
-<div class="container-fluid table-responsive d-none d-md-none d-lg-block">
-  <div class="col-md-12">
-    <table *ngIf="orders" class="table table-striped table-borderless">
-      <thead class="text-uppercase">
-        <tr>
-          <th scope="col" style="width: 20%">Ordine N°</th>
-          <th scope="col" style="width: 30%">Data acquisto</th>
-          <th scope="col" style="width: 30%">Costo totale</th>
-
-          &lt;!&ndash;<th scope="col" style="width: 15%">Prezzo</th>&ndash;&gt;
-          &lt;!&ndash;<th scope="col" style="width: 25%">Stato</th>&ndash;&gt;
-          <th scope="col" style="width: 20%"></th>
-        </tr>
-      </thead>
-      <tr class="bg-blue">
-        <td colspan="9"></td>
-      </tr>
-
-      <tbody class="col-sm-12 striped" >
-        <tr *ngFor="let order of orders">
-          <td>
-            <span style="font-size: 17px;">{{order.id}}</span> <br/>
-          </td>
-          <td>
-            <span style="color: #999; font-size: 15px;">{{formatDate(order.purchase_time)}}</span>
-          </td>
-
-          <td>
-            <span style="font-size: 17px;">{{formatPrice(order.total)}}</span> <br/>
-          </td>
-          <td>
-            <button type="button" (click)="details(order)" class="btn btn-info text-white">
-              <i class="fas fa-info-circle"></i> Dettagli
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div> &lt;!&ndash; XL + LG VIEW &ndash;&gt;
-<div class="d-none d-md-block d-lg-none">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th scope="col" style="width: 20%">Ordine N°</th>
-        <th scope="col" style="width: 30%">Data acquisto</th>
-        <th scope="col" style="width: 30%">Cost totale</th>
-
-        &lt;!&ndash;<th scope="col" style="width: 25%">Stato</th>&ndash;&gt;
-        <th scope="col" style="width: 20%"></th>
-      </tr>
-      </thead>
-      <tr class="bg-blue">
-        <td colspan="9"></td>
-      </tr>
-
-      <tbody class="col-sm-12 striped" >
-      <tr *ngFor="let order of orders">
-        <td>
-          <span style="font-size: 17px;">{{order.id}}</span> <br/>
-        </td>
-        <td>
-          <span style="color: #999; font-size: 15px;">{{formatDate(order.purchase_time)}}</span>
-        </td>
-        <td>
-          <span style="font-size: 17px;">{{formatPrice(order.total)}}</span> <br/>
-        </td>
-
-        <td>
-          <button type="button" (click)="details(order)" class="btn btn-info text-white">
-            <i class="fas fa-info-circle"></i> Dettagli
-          </button>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-</div> &lt;!&ndash; MD VIEW &ndash;&gt;
-<div class="d-block d-md-none">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th scope="col" style="width: 20%">Ordine N°</th>
-        <th scope="col" style="width: 30%">Data acquisto</th>
-        <th scope="col" style="width: 30%">Costo totale</th>
-        <th scope="col" style="width: 20%"></th>
-      </tr>
-      </thead>
-      <tr class="bg-blue">
-        <td colspan="9"></td>
-      </tr>
-
-      <tbody class="col-sm-12 striped" >
-      <tr *ngFor="let order of orders">
-        <td>
-          <span style="font-size: 17px;">{{order.id}}</span> <br/>
-        </td>
-        <td>
-          <span style="color: #999; font-size: 15px;">{{formatDate(order.purchase_time)}}</span>
-
-        </td>
-
-        <td>
-          <span style="font-size: 17px;">{{formatPrice(order.total)}}</span> <br/>
-        </td>
-        &lt;!&ndash;<td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>&ndash;&gt;
-        <td class="text-center">
-          <button type="button" (click)="details(order)" class="btn btn-info text-white">
-            <i class="fas fa-info-circle"></i>
-          </button>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-</div> &lt;!&ndash; SM VIEW &ndash;&gt;
--->
-<!--<ng-container >-->
 <div class="container-fluid">
-  <!--<div class="row">-->
-  <div *ngFor="let order of orders"
-       class="row col-lg-6 col-md-8 col-sm-10 col-12 ml-1 mb-2 px-0 bg-white">
-    <div class="w-100 pl-0">
-      <div class="row py-2 px-3">
-        <div class="col-3">
-          <p class="text-uppercase font-weight-bold small mb-0">Ordine effettuato il:</p>
-          <p class="text-uppercase small mb-0">{{formatDate(order.purchase_time)}}</p>
-        </div>
-        <div class="col-3">
-          <p class="text-uppercase font-weight-bold small mb-0">Totale</p>
-          <p class="text-uppercase small mb-0">EUR {{formatPrice(order.total)}}</p>
-        </div>
-        <div class="col-3 offset-3 text-right">
-          <p class="text-uppercase font-weight-bold small mb-0">Ordine #{{order.id}}</p>
-          <!--<p class="text-uppercase small mb-0">{{order.id}}</p>-->
-        </div>
-      </div>
-      <div class="col-12 bg-blue" style="height: 5px;"></div>
-      <div class="row px-3 py-2">
-        <div class="card-body p-3">
-          <h3 class="card-title mb-0">Ordine N° {{order.id}}</h3>
-          <br>
-          <i class="h5">Costo totale {{formatPrice(order.total)}}</i>
-          <br/>
-          <i class="h5">{{formatDate(order.purchase_time)}}</i>
-          <br>
-          <br>
-          <div class="h5">Coupon inclusi nell'ordine:</div>
-          <br>
-          <div *ngFor="let coupon of coupons">
-            <div *ngIf="coupon.id" class='card card-body p-4'>
-              <i class="la la-trash text-info h5 "> {{coupon.title}} </i>
-              <i class="la la-trash text-info h5 "> Quantità {{coupon['quantityBought']}}</i>
-              <i class="la la-trash text-info h5 "> Prezzo unitario {{formatPrice(coupon.price)}}</i>
+  <h2 class="">I miei ordini</h2>
+  <div class="row ml-0">
+    <ng-container *ngFor="let order of orders">
+      <div class="col-lg-8 col-md-10 col-sm-10 col-12 ml-1 mb-2 px-0 bg-white">
+        <div class="w-100 pl-0">
+          <div class="row py-2 px-3">
+            <div class="col-3">
+              <p class="text-uppercase font-weight-bold small mb-0">Ordine effettuato il:</p>
+              <p class="text-uppercase small mb-0">{{formatDate(order.purchase_time)}}</p>
+            </div>
+            <div class="col-3">
+              <p class="text-uppercase font-weight-bold small mb-0">Totale</p>
+              <p class="text-uppercase small mb-0" *ngIf="order.total">{{formatPrice(order.total)}}</p>
+            </div>
+            <div class="col-3 offset-3 text-right">
+              <p class="text-uppercase font-weight-bold small mb-0">Ordine #{{order.id}}</p>
             </div>
           </div>
-          <br>
+          <div class="col-12 bg-blue" style="height: 5px;"></div>
+          <div class="row px-3 py-2">
+            <div class="card-body p-3">
+              <ng-container *ngFor="let coupon of order.coupons; let i = index">
+                <div class="row">
+                  <div class="col-3 pb-2 pr-2">
+                    <img class="img-fluid" [src]="imageUrl(coupon.image)" alt="Card image cap">
+                    <div class="quantity position-absolute rounded-circle bg-info">{{coupon.quantity}}</div>
+                  </div>
+                  <div class="col-9">
+                    <h4 class="mb-0">{{coupon.title}} </h4>
+                    <p class="small" *ngIf="order.vendor">Venduto da: {{order.vendor.company_name}}</p>
+                    <h5 class="mb-0">{{formatPrice(coupon.price*coupon.quantity)}}</h5>
 
-          <div class="float-right">
-            <button class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I
-              miei ordini
-            </button>
-            <button class="btn btn-primary btn-retry" (click)="myPurchases()"> I miei acquisti</button>
+                    <div class="buttons-bottom">
+                      <button class="btn btn-success mr-2" (click)="myPurchases()">
+                        <i class="fas fa-check-circle mr-1"></i>Riscatta
+                      </button>
+                      <button class="btn btn-info text-white" (click)="details(coupon)">
+                        <i class="fa fa-info-circle mr-1"></i>Dettagli
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <hr class="my-3" *ngIf="(i+1) !== order.coupons.length">
+              </ng-container>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </ng-container>
+    <!--<div class="col-lg-4 position-absolute bg-white" style="height: 400px;">-->
+    <!--</div>-->
   </div>
 </div>
-<!--</ng-container>-->
