--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
@@ -110,7 +110,7 @@
                 </div>
               </div>
             </div> <!-- Published From -->
-            <div *ngIf="couponsAvailable" class="form-group row ">
+            <div  class="form-group row ">
               <label class="col-sm-2 col-form-label">Coupons selezionati: </label>
               <div class="col-sm-12 col-lg-8">
                 <ng-select formControlName="coupons"
@@ -268,7 +268,7 @@
           </div>
           <div class="form group">
             <p>
-              <button class="btn btn-block btn-success">{{fromEdit ? 'Salva modifiche' : 'Crea Pacchetto'}}</button>
+              <button *ngIf="couponsAvailable || fromEdit" class="btn btn-block btn-success" [disabled]="!fromEdit && couponsAvailable.length == 0">{{fromEdit ? 'Salva modifiche' : 'Crea Pacchetto'}}</button>
             </p>
           </div>
 
