[fix] fixed number order

--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -259,7 +259,7 @@
 
 <ng-template #paymentModal>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Pagamento n. #236748227</h4> <!-- TODO: fix order number -->
+    <h4 class="modal-title pull-left">Pagamento n. #{{lastId}}</h4> <!-- TODO: fix order number -->
   </div>
 
   <div class="modal-body">
