--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -53,7 +53,7 @@
               <button class="btn btn-lg btn-success float-right ml-2" *ngIf="token && !paymentError"
                       (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
-                Paga
+                Termina e paga
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
