--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -209,7 +209,7 @@
             </div> <!-- Quantity -->
 
             <div class="form-group row">
-              <label class="col-sm-4 col-lg-2 col-form-label">Acquisto massimo per User</label>
+              <label class="col-sm-4 col-lg-2 col-form-label">Acquisto max per utente</label>
               <div  class="col-sm-4 col-lg-8">
                 <input  type="text" formControlName="purchasable" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.purchasable.errors }"/>
