--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -178,7 +178,7 @@
             </div> <!-- Quantity -->
 
             <div class="form-group row">
-              <label class="col-sm-4 col-lg-2 col-form-label">Acquisto massimo per User</label>
+              <label class="col-sm-4 col-lg-2 col-form-label">Acquisto max per utente</label>
               <div class="col-sm-4 col-lg-8">
                 <input type="number" formControlName="purchasable" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.purchasable.errors }"/>
