Improved package list

--- a/src/app/features/reserved-area/broker/package-list/package-list.component.html
+++ b/src/app/features/reserved-area/broker/package-list/package-list.component.html
@@ -31,7 +31,7 @@
       <td>{{formatPrice(package.price)}}</td>
       <td>{{formatState(0)}}</td>
       <td>{{package.quantity}}</td>
-      <td>{{package.buyed}}</td>
+      <td>{{package.bought}}</td>
 
 
       <td>
@@ -99,7 +99,7 @@
       <td>{{formatPrice(package.price)}}</td>
       <td>{{formatState(0)}}</td>
       <td>{{package.quantity}}</td>
-      <td>{{package.buyed}}</td>
+      <td>{{package.bought}}</td>
 
       <td>
         <div class="btn-group" dropdown>
@@ -151,7 +151,7 @@
       </td>
       <td>{{formatPrice(package.price)}}</td>
       <td>{{formatState(0)}}</td>
-      <td>{{package.buyed}}/{{package.quantity}}</td>
+      <td>{{package.bought}}/{{package.quantity}}</td>
       <td>
         <div class="btn-group" dropdown>
           <button id="action-button-2" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
