--- a/src/app/features/reserved-area/broker/package-create/package-create.component.html
+++ b/src/app/features/reserved-area/broker/package-create/package-create.component.html
@@ -122,8 +122,8 @@
                   [ngClass]="{ 'is-invalid': submitted && f.coupons.errors }" >
                 </ng-select>-->
 
-                <select id="couponChoice" class="form-control" formControlName="coupons" (change)="openModal(couponAdding)"> <!-- OPEN MODAL instead of EVENT -->
-                  <option value="0">Scegli un coupon...</option>
+                <select id="couponChoice" class="form-control" formControlName="coupons" (change)="openModal(couponAdding)"> <!-- formControlName="coupons"  -->
+                  <option value="" selected>Scegli un coupon...</option>
                   <option *ngFor="let coupon of couponsAvailable" [value]="coupon.id">{{coupon.title}}</option>
                 </select>
 
@@ -220,7 +220,7 @@
               <label class="col-sm-4 col-lg-2 col-form-label">Quantità</label>
               <div class="col-sm-12 col-lg-8">
                 <input type="number" formControlName="quantity" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" min="1" max="1"/>
+                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }"/>
                 <div class="invalid-feedback"
                      *ngIf="submitted && f.quantity.errors?.MatchErrorQuantity">
                   <div>Quantità non corretta.</div>
@@ -292,7 +292,7 @@
             </div>
             <div class="form group">
               <p>
-                <button *ngIf="couponsAvailable" class="btn btn-block btn-success btn-create-coupon" [disabled]="couponsAvailable.length == 0">Crea</button>
+                <button *ngIf="couponsAvailable" class="btn btn-block btn-success btn-create-coupon" [disabled]="coupons.length == 0">Crea</button>
               </p>
             </div>
 
